# motif_finder

./: .gitignore  .height.out.swo  1  Cargo.toml  README.md  acorrs0.txt  acorrs1.txt  acorrs10.txt  acorrs11.txt  acorrs12.txt  acorrs13.txt  acorrs14.txt  acorrs15.txt  acorrs16.txt  acorrs17.txt  acorrs18.txt  acorrs2.txt  acorrs3.txt  acorrs4.txt  acorrs5.txt  acorrs6.txt  acorrs7.txt  acorrs8.txt  acorrs9.txt  cachegrind.out.1025896  cachegrind.out.1157756  cachegrind.out.1165100  cachegrind.out.1195268  cachegrind.out.1201005  cachegrind.out.1205839  cachegrind.out.2208292  cachegrind.out.2251284  cachegrind.out.2259009  cachegrind.out.2301058  cachegrind.out.2302759  cachegrind.out.2312126  cachegrind.out.2317472  cachegrind.out.2326590  cachegrind.out.2348548  cachegrind.out.2392141  (+41 more)
benches/: my_benchmark.rs
src/: .lib.rs.swp  .sequence.rs.swp  .waveform.rs.swp  base.rs  data_struct.rs  gene_loci.rs  lib.rs  main.rs  modified_t.rs  process.rs  sequence.rs  trial_hists.rs  waveform.rs
~/tmp/pgo-data/: default_10862113629541782366_0.profraw  default_10956528260069152405_0.profraw  default_11927424080359199611_0.profraw  default_14210391283116401343_0.profraw  default_1570985816966913418_0.profraw  default_16737494641681578898_0.profraw  default_18033215607044668634_0.profraw  default_3176775035029362980_0.profraw
