[package]
name = "motif_finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
log = { version = "0.4", features = ["std", "serde"] }
itertools = "0.10.5"
statrs = "0.16"
fastrand = "1.9.0"
once_cell = "1.17.1"
aberth = "0.0.3"
num-complex = "0.4.3"
num-traits = "0.2.15"
indxvec = "1.8.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
debug = 2

