[package]
name = "motif_finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
log = { version = "0.4", features = ["std", "serde"] }
itertools = "0.10.5"
statrs = "0.16"
fastrand = "2.0.0"
once_cell = "1.17.1"
aberth = "0.0.3"
num-complex = "0.4.3"
num-traits = "0.2.15"
indxvec = "1.8.0"
rayon = "1.7.0"
assume = "0.5.0"
serde = {version = "1.0.163", features = ["derive"]}
serde_json = "1.0"
serde-big-array = "0.5.1"
regex = "1.8.3"
nalgebra = "0.32.2"
ndarray = "0.15.6"
argmin = "0.8.1"
argmin-math = "0.3.0"
kmedoids = "0.4.3"
poloto = "2.17.0"
plotters = "0.3"

[dev-dependencies]
criterion = "0.3"


[[bin]]
name = "tool"
path = "src/bin/tool.rs"


[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
debug = true

[profile.dev]
opt-level = 3               # Use slightly better optimizations.
overflow-checks = false     # Disable integer overflow checks.
